# server/controllers/inventario.js
@@ -4,87 +4,118 @@ const util = require('util');
 const accepts = require('accepts');
 const jstoxml = require('../helpers/js2xml');
 const Establecimiento = require('../models/establecimiento');
+const Inventario = require('../models/inventario');
+const Producto = require('../models/producto');
 
 module.exports.findAllInventarioInEstablecimiento = function(req, res, next) {
     let establecimientoId = req.swagger.params.establecimientoId.value;
+    let establecimiento = null;
 
-    Establecimiento.find({'establecimientoId': establecimientoId}, function (err, data) {
-        let accept = accepts(req);
-        let result = null;
+    Promise.all([
+        Establecimiento.findById(establecimientoId).then(result => establecimiento = result)
+    ]).then(function () {
 
-        if (err) {
-            return next(new Error(err));
-        }
+        Inventario.find({'establecimiento': establecimiento}, function (err, data) {
+            let accept = accepts(req);
+            let result = null;
 
-        switch(accept.type(['json', 'xml', 'html'])) {
-            case 'xml':
-                result = Establecimiento.toXml(data, false);
-                res.setHeader('Content-Type', 'application/xml');
-                res.end(result);
-                break;
-            case 'html':
-                result = Establecimiento.toHtml(data, false);
-                res.setHeader('Content-Type', 'text/html');
-                res.end(result);
-                break;
-            default:
-                // fallback to json
-                result = Establecimiento.toJson(data);
-                res.setHeader('Content-Type', 'application/json');
-                res.end(result);
-                break;
-        }
+            if (err) {
+                return next(new Error(err));
+            }
+
+            switch(accept.type(['json', 'xml', 'html'])) {
+                case 'xml':
+                    result = Inventario.toXml(data, false);
+                    res.setHeader('Content-Type', 'application/xml');
+                    res.end(result);
+                    break;
+                case 'html':
+                    result = Inventario.toHtml(data, false);
+                    res.setHeader('Content-Type', 'text/html');
+                    res.end(result);
+                    break;
+                default:
+                    // fallback to json
+                    result = Inventario.toJson(data);
+                    res.setHeader('Content-Type', 'application/json');
+                    res.end(result);
+                    break;
+            }
+        });
+    }, function (err) {
+        return next(new Error(err));
     });
 };
 
 module.exports.findOneInventarioInEstablecimiento = function(req, res, next) {
     let establecimientoId = req.swagger.params.establecimientoId.value;
+    let establecimiento = null;
 
-    Establecimiento.findById(establecimientoId, function(err, data) {
-        let accept = accepts(req);
-        let result = null;
+    Promise.all([
+        Establecimiento.findById(establecimientoId).then(result => establecimiento = result)
+    ]).then(function () {
+        Inventario.findBy({'establecimiento': establecimiento}, function(err, data) {
+            let accept = accepts(req);
+            let result = null;
 
-        if (err) {
-            return next(new Error(err));
-        }
+            if (err) {
+                return next(new Error(err));
+            }
 
-        switch(accept.type(['json', 'xml', 'html'])) {
-            case 'xml':
-                result = Establecimiento.toXml(data, false);
-                res.setHeader('Content-Type', 'application/xml');
-                res.end(result);
-                break;
-            case 'html':
-                result = Establecimiento.toHtml(data, false);
-                res.setHeader('Content-Type', 'text/html');
-                res.end(result);
-                break;
-            default:
-                // fallback to json
-                result = Establecimiento.toJson(data);
-                res.setHeader('Content-Type', 'application/json');
-                res.end(result);
-                break;
-        }
+            switch(accept.type(['json', 'xml', 'html'])) {
+                case 'xml':
+                    result = Establecimiento.toXml(data, false);
+                    res.setHeader('Content-Type', 'application/xml');
+                    res.end(result);
+                    break;
+                case 'html':
+                    result = Establecimiento.toHtml(data, false);
+                    res.setHeader('Content-Type', 'text/html');
+                    res.end(result);
+                    break;
+                default:
+                    // fallback to json
+                    result = Establecimiento.toJson(data);
+                    res.setHeader('Content-Type', 'application/json');
+                    res.end(result);
+                    break;
+            }
+        });
+    }, function (err) {
+        return next(new Error(err));
     });
 };
 
 module.exports.addInventarioInEstablecimiento = function(req, res, next) {
     let body = req.swagger.params.body.value;
+    let producto = null;
+    let establecimiento = null;
 
-    let item = new Establecimiento();
-    item.nombre = body.nombre;
-    item.establecimiento = body.establecimiento;
+    Promise.all([
+        Establecimiento.findById(body.establecimientoId).then(result => establecimiento = result),
+        Producto.findById(body.productoId).then(result => producto = result),
+    ]).then(function () {
 
-    item.save(function (err) {
-        if (err) {
-            return next(new Error(err));
-        }
+        let item = new Inventario();
+        item.establecimiento = establecimiento;
+        item.producto = producto;
+        item.precio = {'moneda': 'CLP', 'valor': '10000'};
+        item.estado = 'ingreso';
 
-        let result = Establecimiento.toJson(item);
-        res.setHeader('Content-Type', 'application/json');
-        res.end(result);
+        item.save(function (err) {
+            if (err) {
+                return next(new Error(err));
+            }
+
+            let result = Inventario.toJson(item);
+            res.setHeader('Content-Type', 'application/json');
+            res.end(result);
+        });
+
+    }, function (err) {
+        return next(new Error(err));
     });
+
 };
 
 module.exports.updateInventarioInEstablecimiento = function(req, res) {
